# CppFinalProject

./: CMakeLists.txt  README.md
src/: constants.h  layer.cpp  layer.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  tests.cpp  utils.cpp  utils.h
src/data/: a.out  extract.cpp
